welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:13: error: not enough arguments for method move: (nbPas: Int, versLAvant: Boolean)Unit.
Unspecified value parameters nbPas, versLAvant.
move();
    ^